# protomedal

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  todo.md
cmake/: assets.cmake  init.cmake
cmake/libs/: __template.cmake  _glfw.cmake  _glm.cmake  _imgui.cmake  _json.cmake  _miniaudio.cmake  _raylib-nuklear.cmake  _rlImGui.cmake  _system.cmake  enet.cmake  raygui.cmake  raylib-nuklear.cmake  raylib.cmake
cmake/utils/: libloader.cmake  printer.cmake
scripts/: build_clang.sh  build_gcc.sh  clean_subbuild.sh  configure_clang.sh  configure_gcc.sh  copy_assets.sh  get_project_info.sh  package.sh  run.sh
source/client/: chat.cpp  chat.hpp  game.c  game.cpp  game.h  game.hpp  main.c  main.cpp  network.cpp  network.hpp  player.c  player.cpp  player.h  player.hpp  window.c  window.cpp  window.h  window.hpp
source/server/: server.c  server.cpp
